# echomancy

./: .gitignore  ABILITY_CONTRACT_MVP.md  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  package-lock.json  package.json  vitest.config.mts  vitest.setup.ts
.claude/agents/: agent-orchestrator.md  fullstack-feature-owner.md  mtg-code-reviewer.md  mtg-domain-expert.md  mtg-product-manager.md  mtg-spec-writer.md  qa-validator.md  rust-engineer.md  senior-backend-engineer.md  tcg-ui-designer.md  tech-lead-strategist.md  typescript-architect.md  ui-engineer.md
.github/: dependabot.yaml
.github/workflows/: ci.yaml  release.yaml
.serena/: project.yml
crates/clips-sys/: Cargo.toml  build.rs
crates/echomancy-bevy/: Cargo.toml
crates/echomancy-core/: Cargo.toml
docs/: README.md  TEST_PLAN.md  ability-system.md  api-conventions.md  architecture-clips-integration.md  architecture.md  combat-resolution.md  commands-and-queries.md  cost-system.md  creature-stats.md  effect-system.md  game-events.md  game-snapshot.md  game-state-export.md  mana-system.md  stack-and-priority.md  static-abilities.md  testing-guide.md  turn-structure.md  ui-architecture.md  zones-and-cards.md
docs/specs/: BACKLOG.md
rules/core/: templates.clp
specs/active/: 00-debug-game-management.md  01-ui-phase-0-debug-console.md  01-ui-phase-1-readonly-display.md  01-ui-phase-1a-route-and-data-pipeline.md
specs/backlog/: 02-ui-phase-1b-basic-game-info.md  02-ui-phase-2-basic-actions.md  03-ui-phase-1c-battlefield-display.md  03-ui-phase-3-spell-casting.md  (+3 more)
(+372 files in other folders)
