[workspace]
resolver = "2"
members = [
    "crates/echomancy-core",
    "crates/echomancy-bevy",
    "crates/clips-sys",
]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
rand = "0.10"
bevy = "=0.18.1"
cc = "1"
clips-sys = { path = "crates/clips-sys" }
